2001-06-24  Akim Demaille  <akim@epita.fr>

	* acfunctions.m4 (AM_FUNC_ERROR_AT_LINE, AM_FUNC_FNMATCH)
	(AM_FUNC_MKTIME, AM_FUNC_OBSTACK, AM_FUNC_STRTOD): Reactivated.
	* doc/autoconf.texi (Autoconf 2.13): New section.

2001-06-24  Akim Demaille  <akim@epita.fr>

	* autoconf.in (Task traces): Separate the error messages from the
	traces to improve robustness.

	
2001-06-23  Akim Demaille  <akim@epita.fr>

	* tests/torture.at (AC_ARG_VAR): Make it a single test instead of
	three as failures are unlikely, and speed matters.

2001-06-23  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Redefined M4 Macros): New.

2001-06-23  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (_AC_INCLUDES_DEFAULT_REQUIREMENTS): Consider
	inttypes.h is missing if it conflicts with sys/types.h, as on IRIX
	5.3.

2001-06-23  Paolo Bonzini <bonzini@gnu.org>

	* acgeneral.m4 (_AC_OUTPUT_CONFIG_STATUS): Defer parsing of
	config.status targets to after the evaluation of the INIT-CMDS.
	Double quote config.status targets (used to be single quoted).

2001-06-23  Akim Demaille  <akim@epita.fr>

	* tests/torture.at (CONFIG_FILES, HEADERS, LINKS and COMMANDS):
	Check the content of the created file.
	Check the ./config.status command line invocation.

2001-06-23  Akim Demaille  <akim@epita.fr>

	* tests/foreign.at (Libtool): Reject prehistoric versions.

2001-06-23  Akim Demaille  <akim@epita.fr>

	* aclang.m4 (_AC_COMPILER_EXEEXT_DEFAULT): Try to be robust to
	preexisting files matching a.*.

2001-06-23  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (_AC_ARG_VAR_VALIDATE): Output error messages on
	stderr.
	* doc/autoconf.texi (AC_ARG_VAR): Update.

2001-06-21  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (_AC_ARG_VAR_VALIDATE): Die instead of warning when
	precious variables have changed.
	* tests/torture.at (AC_ARG_VAR): Adjust.

2001-06-21  Akim Demaille  <akim@epita.fr>

	./configure --program-suffix=foo produces `transform=s,$$,foo,;',